<resources>
    <string name="app_name">Twigbit Ident Identifizierung</string>

    <string name="twigbit_ident_drop_in_attach_card">Bitte halten Sie ihren Personalausweis jetzt für den gesamten
        Vorgang gegen den
        NFC Sensor Ihres Smartphones.
    </string>
    <string name="twigbit_ident_drop_in_error_button">Willkommen, wir werden Sie jetzt durch die Identifizierung
        begleiten. Bitte
        halten Sie ihren Personalausweis gegen die Rückseite Ihres Smartphones.
    </string>
    <string name="twigbit_ident_drop_in_intro_button">Starten</string>
    <string name="twigbit_ident_drop_in_accept">Akzeptieren</string>
    <string name="twigbit_ident_drop_in_deny">Abbrechen</string>
    <string name="twigbit_ident_drop_in_finish">Beenden</string>
    <string name="twigbit_ident_drop_in_enter_can">Bitte geben sie die CAN ein:</string>
    <string name="twigbit_ident_drop_in_enter_pin">Bitte geben sie ihre PIN ein:</string>
    <string name="twigbit_ident_drop_in_enter_puk">Bitte geben sie ihre PUK ein:</string>
    <string name="twigbit_ident_drop_in_success">Ihre Daten wurden erfolgreich ausgelesen.
    </string>
    <string name="twigbit_ident_drop_in_error">Ein Fehler ist aufgetreten.</string>
    <string name="twigbit_ident_drop_in_intro">Willkommen, wir werden Sie jetzt durch die Identifizierung begleiten.
        Bitte halten Sie
        ihren Personalausweis während des gesamten Vorgangs gegen die Rückseite Ihres Smartphones.
    </string>
    <string name="twigbit_ident_drop_in_continue">Weiter</string>

    <string name="twigbit_ident_access_right_address">Anschrift</string>
    <string name="twigbit_ident_access_right_birth_name">Geburtsname</string>
    <string name="twigbit_ident_access_right_family_name">Familienname</string>
    <string name="twigbit_ident_access_right_given_names">Vornamen</string>
    <string name="twigbit_ident_access_right_place_of_birth">Ort der Geburt</string>
    <string name="twigbit_ident_access_right_date_of_birth">Tag der Geburt</string>
    <string name="twigbit_ident_access_right_doctoral_degree">Akademisches Grad</string>
    <string name="twigbit_ident_access_right_artistic_name">Ordens- / Künstlername</string>
    <string name="twigbit_ident_access_right_pseudonym">Pseudonym</string>
    <string name="twigbit_ident_access_right_valid_until">Ablaufdatum</string>
    <string name="twigbit_ident_access_right_nationality">Staatsangehöritgkeit</string>
    <string name="twigbit_ident_access_right_issuing_country">Ausstellender Staat</string>
    <string name="twigbit_ident_access_right_document_type">Dokumentenart</string>
    <string name="twigbit_ident_access_right_residence_permit_i">Aufenthaltserlaubnis</string>
    <string name="twigbit_ident_access_right_residence_permit_ii">Aufenthaltserlaubnis 2</string>
    <string name="twigbit_ident_access_right_community_id">community_id</string>
    <string name="twigbit_ident_access_right_address_verification">Wohnortverifikation</string>
    <string name="twigbit_ident_access_right_age_verification">Altersverifikation</string>
    <string name="twigbit_ident_access_right_unknown_value">Unbekannter Wert</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twigbit_ident_certificate_service_provider_info">Anbieterinformationen</string>
    <string name="twigbit_ident_certificate_service_provider">Diensteanbieter</string>
    <string name="twigbit_ident_certificate_issuer">Aussteller des Berechtigungszertifikats</string>
    <string name="twigbit_ident_certificate_purpose">Zweck</string>
    <string name="twigbit_ident_certificate_validity">Gültigkeit</string>
    <string name="twigbit_ident_certificate_information">Angaben zum Diensteanbieter</string>

    <string name="twigbit_ident_drop_in_access_rights_header">Der folgende Diensteanbieter möchte Ihre Identität
        überprüfen:
    </string>
    <string name="twigbit_ident_drop_in_service_provider">Diensteanbieter</string>
    <string name="twigbit_ident_drop_in_access_rights_purpose">Zweck der Auskunft</string>
    <string name="twigbit_ident_drop_in_attribute_header">Folgende Attribute werden ausgelesen</string>
    <string name="twigbit_ident_drop_in_attributes">Attribute</string>
    <string name="twigbit_ident_drop_in_logo_content_description">Logo des Diensteanbieters</string>
</resources>
