<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipChildren="false"
              android:clipToPadding="false"
              android:orientation="vertical"
              tools:context=".dropinui.IntroFragment">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_margin="12dp">
        <ImageButton android:layout_width="48dp" android:layout_height="48dp" android:background="@null"
                     android:id="@+id/buttonBack"
                     android:src="@drawable/twigbit_ident_icon_back"/>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:padding="12dp"
                android:layout_weight="1" android:clipChildren="false" android:clipToPadding="false">

        <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                            android:layout_marginBottom="16dp"
                                            android:layout_height="wrap_content" android:theme="@style/TwigbitIdentTheme.CardStyle">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical" android:padding="16dp">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                               android:layout_gravity="center"
                               android:layout_marginRight="16dp"
                               android:src="@drawable/twigbit_ident_icon_info"/>
                    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/twigbit_ident_certificate_service_provider_info"
                        android:layout_gravity="center"
                        style="@style/TwigbitIdentTheme.TextAppearanceHeadline"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginTop="24dp">

                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/twigbit_ident_certificate_service_provider"
                              style="@style/TwigbitIdentTheme.TextAppearanceOverline"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textServiceProviderName"
                    />
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textServiceProviderUrl"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginTop="24dp">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/twigbit_ident_certificate_issuer"
                              style="@style/TwigbitIdentTheme.TextAppearanceOverline"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textIssuerName"
                    />
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textIssuerUrl"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginTop="24dp">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/twigbit_ident_certificate_purpose"
                              style="@style/TwigbitIdentTheme.TextAppearanceOverline"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textPurpose"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginTop="24dp">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/twigbit_ident_certificate_validity"
                              style="@style/TwigbitIdentTheme.TextAppearanceOverline"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textValidity"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_marginTop="24dp">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/twigbit_ident_certificate_information"
                              style="@style/TwigbitIdentTheme.TextAppearanceOverline"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              style="@style/TwigbitIdentTheme.TextAppearanceBody"
                              android:id="@+id/textServiceProviderInfo"
                    />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>